<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ps__gradient_background_gray"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        tools:context=".MainActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_blogger"
                android:text="@string/blogger"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_deviant"
                android:text="@string/deviant"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button141"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_deviant"
                android:text="@string/deviant"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_digg"
                android:text="@string/digg"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button222"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_digg"
                android:text="@string/digg"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_dribbble"
                android:text="@string/dribble"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/Button01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_dribbble"
                android:text="@string/dribble"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_dropbox"
                android:text="@string/dropbox"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_dropbox"
                android:text="@string/dropbox"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_evernote"
                android:text="@string/evernote"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_facebook"
                android:text="@string/facebook"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_facebook"
                android:text="@string/facebook"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flickr"
                android:text="@string/flickr"
                android:textColor="@color/Black" />

            <Button
                android:id="@+id/button31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_forrst"
                android:text="@string/forrst"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_forrst"
                android:text="@string/forrst"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_github"
                android:text="@string/github"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button133"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_github"
                android:text="@string/github"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_google_plus"
                android:text="@string/google_plus"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button72"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_google_plus"
                android:text="@string/google_plus"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_hacker_news"
                android:text="@string/hacker_news"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_instagram"
                android:text="@string/instagram"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button92"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_instagram"
                android:text="@string/instagram"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_instagram_2"
                android:text="@string/instagram_2"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button101"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_instagram_2"
                android:text="@string/instagram_2"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_last_fm"
                android:text="@string/last_fm"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button192"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_last_fm"
                android:text="@string/last_fm"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_linkedin"
                android:text="@string/linkedin"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button82"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_linkedin"
                android:text="@string/linkedin"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_picasa"
                android:text="@string/picasa"
                android:textColor="@color/Black" />

            <Button
                android:id="@+id/button27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_paypal"
                android:text="@string/paypal"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button2722"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_paypal"
                android:text="@string/paypal"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button272"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_paypal"
                android:text="@string/paypal"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button290"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_pinterest"
                android:text="@string/pinterest"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_pinterest"
                android:text="@string/pinterest"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_quora"
                android:text="@string/quora"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_rss"
                android:text="@string/rss"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button230"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_flat_rss"
                android:text="@string/rss"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button125"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_skype"
                android:text="@string/skype"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_slideshare"
                android:text="@string/slideshare"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_stackoverlfow"
                android:text="@string/stackoverflow"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_stumble_upon"
                android:text="@string/stumble_upon"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_vimeo"
                android:text="@string/vimeo"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_tumblr"
                android:text="@string/tumblr"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_twitter"
                android:text="@string/twitter"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_wordpress"
                android:text="@string/wordpress"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_yahoo"
                android:text="@string/yahoo"
                android:textColor="@color/WhiteSmoke" />

            <Button
                android:id="@+id/button23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ps__button_youtube"
                android:text="@string/youtube"
                android:textColor="@color/WhiteSmoke" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>